assignment-1/src/main/bkit/parser/.antlr/BKITParser.py
# Generated from c:\Users\HP\Downloads\temp\ppl\Assignment-1-PPL\src\main\bkit\parser\BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int_of_float'", "'float_to_int'", "'int_of_string'", 
                     "'string_of_int'", "'float_of_string'", "'string_of_float'", 
                     "'bool_of_string'", "'string_of_bool'", "'('", "')'", 
                     "'['", "']'", "'{'", "'}'", "':'", "';'", "'.'", "','", 
                     "'Body'", "'Break'", "'Continue'", "'Do'", "'Else'", 
                     "'ElseIf'", "'EndBody'", "'EndIf'", "'EndFor'", "'EndWhile'", 
                     "'For'", "'Function'", "'If'", "'Parameter'", "'Return'", 
                     "'Then'", "'Var'", "'While'", "'True'", "'False'", 
                     "'EndDo'", "'='", "'+'", "'-'", "'*'", "'\\'", "'\\%'", 
                     "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'+.'", 
                     "'-.'", "'*.'", "'\\.'", "'>.'", "'<.'", "'>=.'", "'<=.'", 
                     "'=/='", "'!'", "'&&'", "'||'" ]

    symbolicNames = [ "<INVALID>", "INT_OF_FLOAT", "FLOAT_TO_INT", "INT_OF_STRING", 
                      "STRING_OF_INT", "FLOAT_OF_STRING", "STRING_OF_FLOAT", 
                      "BOOL_OF_STRING", "STRING_OF_BOOL", "LP", "RP", "LSB", 
                      "RSB", "LCB", "RCB", "COLON", "SEMICOLON", "DOT", 
                      "COMMA", "BODY", "BREAK", "CONTINUE", "DO", "ELSE", 
                      "ELSEIF", "ENDBODY", "ENDIF", "ENDFOR", "ENDWHILE", 
                      "FOR", "FUNCTION", "IF", "PARAMETER", "RETURN", "THEN", 
                      "VAR", "WHILE", "TRUE", "FALSE", "ENDDO", "EQUAL", 
                      "ADD_OP_INT", "SUB_OP_INT", "MUL_OP_INT", "DIV_OP_INT", 
                      "MOD_OP_INT", "EQUAL_OP_INT", "NOT_EQUAL_OP_INT", 
                      "GREATER_OP_INT", "LESS_OP_INT", "GREATER_EQUAL_OP_INT", 
                      "LESS_EQUAL_OP_INT", "ADD_OP_FLOAT", "SUB_OP_FLOAT", 
                      "MUL_OP_FLOAT", "DIV_OP_FLOAT", "GREATER_OP_FLOAT", 
                      "LESS_OP_FLOAT", "GREATER_EQUAL_OP_FLOAT", "LESS_EQUAL_OP_FLOAT", 
                      "NOT_EQUAL_OP_FLOAT", "NOT_OP", "AND_OP", "OR_OP", 
                      "IDENTIFIER", "INTEGER", "FLOAT", "STRING", "WS", 
                      "COMMENT", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_glo_variable_dec = 1
    RULE_list_var = 2
    RULE_variable_id = 3
    RULE_value = 4
    RULE_array = 5
    RULE_primary_type = 6
    RULE_function_dec = 7
    RULE_list_sta = 8
    RULE_parameter_dec = 9
    RULE_list_param = 10
    RULE_statement = 11
    RULE_if_sta = 12
    RULE_for_sta = 13
    RULE_while_sta = 14
    RULE_do_while_sta = 15
    RULE_break_sta = 16
    RULE_continue_sta = 17
    RULE_call_sta = 18
    RULE_list_exp = 19
    RULE_return_sta = 20
    RULE_variable_dec = 21
    RULE_assignment_exp = 22
    RULE_assignment_sta = 23
    RULE_left_operand = 24
    RULE_exp = 25
    RULE_exp1 = 26
    RULE_exp2 = 27
    RULE_exp3 = 28
    RULE_exp4 = 29
    RULE_exp5 = 30
    RULE_exp6 = 31
    RULE_name_var = 32
    RULE_index_operators = 33
    RULE_fuction_call = 34
    RULE_exp8 = 35

    ruleNames =  [ "program", "glo_variable_dec", "list_var", "variable_id", 
                   "value", "array", "primary_type", "function_dec", "list_sta", 
                   "parameter_dec", "list_param", "statement", "if_sta", 
                   "for_sta", "while_sta", "do_while_sta", "break_sta", 
                   "continue_sta", "call_sta", "list_exp", "return_sta", 
                   "variable_dec", "assignment_exp", "assignment_sta", "left_operand", 
                   "exp", "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", 
                   "name_var", "index_operators", "fuction_call", "exp8" ]

    EOF = Token.EOF
    INT_OF_FLOAT=1
    FLOAT_TO_INT=2
    INT_OF_STRING=3
    STRING_OF_INT=4
    FLOAT_OF_STRING=5
    STRING_OF_FLOAT=6
    BOOL_OF_STRING=7
    STRING_OF_BOOL=8
    LP=9
    RP=10
    LSB=11
    RSB=12
    LCB=13
    RCB=14
    COLON=15
    SEMICOLON=16
    DOT=17
    COMMA=18
    BODY=19
    BREAK=20
    CONTINUE=21
    DO=22
    ELSE=23
    ELSEIF=24
    ENDBODY=25
    ENDIF=26
    ENDFOR=27
    ENDWHILE=28
    FOR=29
    FUNCTION=30
    IF=31
    PARAMETER=32
    RETURN=33
    THEN=34
    VAR=35
    WHILE=36
    TRUE=37
    FALSE=38
    ENDDO=39
    EQUAL=40
    ADD_OP_INT=41
    SUB_OP_INT=42
    MUL_OP_INT=43
    DIV_OP_INT=44
    MOD_OP_INT=45
    EQUAL_OP_INT=46
    NOT_EQUAL_OP_INT=47
    GREATER_OP_INT=48
    LESS_OP_INT=49
    GREATER_EQUAL_OP_INT=50
    LESS_EQUAL_OP_INT=51
    ADD_OP_FLOAT=52
    SUB_OP_FLOAT=53
    MUL_OP_FLOAT=54
    DIV_OP_FLOAT=55
    GREATER_OP_FLOAT=56
    LESS_OP_FLOAT=57
    GREATER_EQUAL_OP_FLOAT=58
    LESS_EQUAL_OP_FLOAT=59
    NOT_EQUAL_OP_FLOAT=60
    NOT_OP=61
    AND_OP=62
    OR_OP=63
    IDENTIFIER=64
    INTEGER=65
    FLOAT=66
    STRING=67
    WS=68
    COMMENT=69
    ERROR_CHAR=70
    UNCLOSE_STRING=71
    ILLEGAL_ESCAPE=72
    UNTERMINATED_COMMENT=73

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def glo_variable_dec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Glo_variable_decContext)
            else:
                return self.getTypedRuleContext(BKITParser.Glo_variable_decContext,i)


        def function_dec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Function_decContext)
            else:
                return self.getTypedRuleContext(BKITParser.Function_decContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 72
                self.glo_variable_dec()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION:
                self.state = 78
                self.function_dec()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 84
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Glo_variable_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def list_var(self):
            return self.getTypedRuleContext(BKITParser.List_varContext,0)


        def SEMICOLON(self):
            return self.getToken(BKITParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_glo_variable_dec




    def glo_variable_dec(self):

        localctx = BKITParser.Glo_variable_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_glo_variable_dec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(BKITParser.VAR)
            self.state = 87
            self.match(BKITParser.COLON)
            self.state = 88
            self.list_var()
            self.state = 89
            self.match(BKITParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_id(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Variable_idContext)
            else:
                return self.getTypedRuleContext(BKITParser.Variable_idContext,i)


        def EQUAL(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.EQUAL)
            else:
                return self.getToken(BKITParser.EQUAL, i)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ValueContext)
            else:
                return self.getTypedRuleContext(BKITParser.ValueContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_list_var




    def list_var(self):

        localctx = BKITParser.List_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_list_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.variable_id()
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.EQUAL:
                self.state = 92
                self.match(BKITParser.EQUAL)
                self.state = 93
                self.value()


            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 96
                self.match(BKITParser.COMMA)
                self.state = 97
                self.variable_id()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKITParser.EQUAL:
                    self.state = 98
                    self.match(BKITParser.EQUAL)
                    self.state = 99
                    self.value()


                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_idContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(BKITParser.IDENTIFIER, 0)

        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSB)
            else:
                return self.getToken(BKITParser.LSB, i)

        def INTEGER(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INTEGER)
            else:
                return self.getToken(BKITParser.INTEGER, i)

        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSB)
            else:
                return self.getToken(BKITParser.RSB, i)

        def getRuleIndex(self):
            return BKITParser.RULE_variable_id




    def variable_id(self):

        localctx = BKITParser.Variable_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variable_id)
        self._la = 0 # Token type
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.match(BKITParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.match(BKITParser.IDENTIFIER)
                self.state = 112 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 109
                    self.match(BKITParser.LSB)
                    self.state = 110
                    self.match(BKITParser.INTEGER)
                    self.state = 111
                    self.match(BKITParser.RSB)
                    self.state = 114 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==BKITParser.LSB):
                        break

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primary_type(self):
            return self.getTypedRuleContext(BKITParser.Primary_typeContext,0)


        def array(self):
            return self.getTypedRuleContext(BKITParser.ArrayContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_value




    def value(self):

        localctx = BKITParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_value)
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.primary_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.array()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(BKITParser.LCB, 0)

        def RCB(self):
            return self.getToken(BKITParser.RCB, 0)

        def array(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ArrayContext)
            else:
                return self.getTypedRuleContext(BKITParser.ArrayContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def primary_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Primary_typeContext)
            else:
                return self.getTypedRuleContext(BKITParser.Primary_typeContext,i)


        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.IDENTIFIER)
            else:
                return self.getToken(BKITParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return BKITParser.RULE_array




    def array(self):

        localctx = BKITParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(BKITParser.LCB)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 13)) & ~0x3f) == 0 and ((1 << (_la - 13)) & ((1 << (BKITParser.LCB - 13)) | (1 << (BKITParser.COMMA - 13)) | (1 << (BKITParser.TRUE - 13)) | (1 << (BKITParser.FALSE - 13)) | (1 << (BKITParser.ADD_OP_INT - 13)) | (1 << (BKITParser.SUB_OP_INT - 13)) | (1 << (BKITParser.IDENTIFIER - 13)) | (1 << (BKITParser.INTEGER - 13)) | (1 << (BKITParser.FLOAT - 13)) | (1 << (BKITParser.STRING - 13)))) != 0):
                self.state = 139
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                if la_ == 1:
                    self.state = 123
                    self.array()
                    pass

                elif la_ == 2:
                    self.state = 126
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [BKITParser.LCB, BKITParser.TRUE, BKITParser.FALSE, BKITParser.ADD_OP_INT, BKITParser.SUB_OP_INT, BKITParser.INTEGER, BKITParser.FLOAT, BKITParser.STRING]:
                        self.state = 124
                        self.primary_type()
                        pass
                    elif token in [BKITParser.IDENTIFIER]:
                        self.state = 125
                        self.match(BKITParser.IDENTIFIER)
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 135
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt==1:
                            self.state = 128
                            self.match(BKITParser.COMMA)
                            self.state = 131
                            self._errHandler.sync(self)
                            token = self._input.LA(1)
                            if token in [BKITParser.LCB, BKITParser.TRUE, BKITParser.FALSE, BKITParser.ADD_OP_INT, BKITParser.SUB_OP_INT, BKITParser.INTEGER, BKITParser.FLOAT, BKITParser.STRING]:
                                self.state = 129
                                self.primary_type()
                                pass
                            elif token in [BKITParser.IDENTIFIER]:
                                self.state = 130
                                self.match(BKITParser.IDENTIFIER)
                                pass
                            else:
                                raise NoViableAltException(self)
                     
                        self.state = 137
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

                    pass

                elif la_ == 3:
                    self.state = 138
                    self.match(BKITParser.COMMA)
                    pass


                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 144
            self.match(BKITParser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Primary_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(BKITParser.INTEGER, 0)

        def SUB_OP_INT(self):
            return self.getToken(BKITParser.SUB_OP_INT, 0)

        def ADD_OP_INT(self):
            return self.getToken(BKITParser.ADD_OP_INT, 0)

        def FLOAT(self):
            return self.getToken(BKITParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(BKITParser.STRING, 0)

        def TRUE(self):
            return self.getToken(BKITParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(BKITParser.FALSE, 0)

        def array(self):
            return self.getTypedRuleContext(BKITParser.ArrayContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_primary_type




    def primary_type(self):

        localctx = BKITParser.Primary_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_primary_type)
        self._la = 0 # Token type
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKITParser.ADD_OP_INT or _la==BKITParser.SUB_OP_INT:
                    self.state = 146
                    _la = self._input.LA(1)
                    if not(_la==BKITParser.ADD_OP_INT or _la==BKITParser.SUB_OP_INT):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 149
                self.match(BKITParser.INTEGER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKITParser.ADD_OP_INT or _la==BKITParser.SUB_OP_INT:
                    self.state = 150
                    _la = self._input.LA(1)
                    if not(_la==BKITParser.ADD_OP_INT or _la==BKITParser.SUB_OP_INT):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 153
                self.match(BKITParser.FLOAT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 154
                self.match(BKITParser.STRING)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 155
                self.match(BKITParser.TRUE)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 156
                self.match(BKITParser.FALSE)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 157
                self.array()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COLON)
            else:
                return self.getToken(BKITParser.COLON, i)

        def IDENTIFIER(self):
            return self.getToken(BKITParser.IDENTIFIER, 0)

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def list_sta(self):
            return self.getTypedRuleContext(BKITParser.List_staContext,0)


        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def parameter_dec(self):
            return self.getTypedRuleContext(BKITParser.Parameter_decContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_function_dec




    def function_dec(self):

        localctx = BKITParser.Function_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_function_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(BKITParser.FUNCTION)
            self.state = 161
            self.match(BKITParser.COLON)
            self.state = 162
            self.match(BKITParser.IDENTIFIER)
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 163
                self.parameter_dec()


            self.state = 166
            self.match(BKITParser.BODY)
            self.state = 167
            self.match(BKITParser.COLON)
            self.state = 168
            self.list_sta()
            self.state = 169
            self.match(BKITParser.ENDBODY)
            self.state = 170
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_staContext(ParserRuleContext):
